<resources>
    <string name="the_best_security_for_your_notes">The best security for your notes</string>
    <string name="lock">Lock</string>
    <string name="add_note">Add note</string>
    <string name="get_started">GET STARTED</string>
    <string name="or_enter_key_here_to_import">Or enter a key here to import</string>
    <string name="without_key_you_cannot_restore_your_notes">Without the key, you cannot restore your notes</string>
    <string name="backup_this_private_key_to_safe_place">Back up this private key to a safe place</string>
    <string name="copy_to_clipboard">COPY TO CLIPBOARD</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="caps">Caps</string>
    <string name="backspace">⌫</string>
    <string name="abc">ABC</string>
    <string name="special_chars">!#%</string>
    <string name="enter_access_code">Enter access code</string>
    <string name="create_access_code">Create access code</string>
    <string name="repeat_access_code">Repeat access code</string>
    <string name="code_not_match">Code do not match</string>
    <string name="minimum_password_length_is_n">Minimum password length is %d</string>
    <string name="copied">Copied!</string>
    <string name="wrong_code_you_have_n_attempts">Wrong code, you have %d attempts remaining</string>
    <string name="enter_your_private_key_here">Enter your private key here…</string>
    <string name="blocked">Blocked!</string>
    <string name="key_recovery">Key Recovery</string>
    <string name="key_setup">Key Setup</string>
    <string name="apply">Apply</string>
    <string name="wrong_key">Wrong key!</string>
    <string name="invalid_key">Invalid key</string>
    <string name="lock_app">Lock app</string>
    <string name="save_note">Save note</string>
    <string name="delete_note">Delete note</string>
    <string name="name">Name</string>
    <string name="start_typing">Start typing…</string>
    <string name="new_note">New</string>
    <string name="edit">Edit</string>
    <string name="this_action_cannot_be_undo_are_you_sure">This action cannot be undone.\nAre you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delete">Delete</string>
    <string name="delete_caps">DELETE</string>
    <string name="enter_the_code">Enter the code!</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="search_notes">Search notes</string>
    <string name="found_n">Found: %d</string>
    <string name="no_notes">No notes</string>
    <string name="change_access_code">Change access code</string>
    <string name="create_new_access_code">Create new access code</string>
    <string name="updated">Updated!</string>
    <string name="regenerate_or_import_key">Regenerate or import key</string>
    <string name="key_regeneration_warning">This action will cause all of your data to be re-encrypted.\nAre you sure?</string>
    <string name="re_encrypting_data">Re-encrypting data…</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading…</string>
    <string name="initializing">Initializing…</string>
    <string name="exporting">Exporting…</string>
    <string name="exporting_data">Exporting data…</string>
    <string name="importing_data">Importing data…</string>
    <string name="encrypting_data">Encrypting data…</string>
    <string name="decrypting_data">Decrypting data…</string>
    <string name="compressing">Compressing…</string>
    <string name="wiping_temp_data">Wiping temporary data…</string>
    <string name="importing">Importing…</string>
    <string name="export">Export</string>
    <string name="exported">Exported!</string>
    <string name="export_failed">Export failed!</string>
    <string name="saved_to">Saved to %s</string>
    <string name="import_text">Import</string>
    <string name="import_key">Import key</string>
    <string name="select_a_dump">Select a dump</string>
    <string name="imported">Imported</string>
    <string name="cannot_decrypt_file">Cannot decrypt file</string>
    <string name="open_attachments">Open attachments</string>
    <string name="no_files">No files</string>
    <string name="add_file">Add file</string>
    <string name="file">File</string>
    <string name="choose_files">Choose a file</string>
    <string name="cannot_save_file">Cannot save file</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="file_already_exists_overwrite">File already exists.\nOverwrite?</string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t save</string>
    <string name="overwrite">Overwrite</string>
    <string name="saving_canceled">Saving canceled</string>
    <string name="failed_to_add_all_files_at_once">Failed to add all files at once</string>
    <string name="adding">Adding…</string>
    <string name="deleting">Deleting…</string>
    <string name="saving">Saving…</string>
    <string name="cannot_open_file">Cannot open file</string>
    <string name="tap_the_screen_to_play">Tap the screen to play</string>
    <string name="d_notes">%d\nnotes</string>
    <string name="d_files">%d\nfiles</string>
    <string name="your_data_will_be_exported">Your data will be exported to an encrypted file\nThis may take a long time</string>
    <string name="this_may_take_a_long_time">This may take a long time</string>
    <string name="saving_in">Saving in:</string>
    <string name="cancel">Cancel</string>
    <string name="cancelling">Cancelling…</string>
    <string name="select_backup_file">Select a backup file (.notesr.bak)\nThe file must be encrypted with the same key used in the app</string>
    <string name="import_cannot_be_canceled">Import cannot be canceled.</string>
    <string name="select_file">Select file</string>
    <string name="start">Start</string>
    <string name="cannot_import_data">Cannot import data, it may be corrupted</string>
    <string name="continue_text">Continue</string>
    <string name="failed_to_load_the_file">Failed to load the file</string>
    <string name="migrating_your_data_please_wait">Migrating your data,\nplease wait…</string>
    <string name="files_list_action_bar_title_format">(%1$s) Files of: %2$s</string>
    <string name="error">Error</string>
    <string name="re_encryption_failed_your_key_and_your_data_remains_unchanged">Re-encryption failed, your key and your data remains unchanged.</string>
    <string name="view_text">View Text</string>
    <string name="view_markdown">Markdown View</string>
    <string name="change_mode">Change mode</string>
    <string name="invisible_popup_menu_anchor">Invisible popup menu anchor</string>
    <string name="unsaved_note_changes">This note has unsaved changes. If you close it now, your changes will be lost.</string>
</resources>